grammars/gen/LegalOpinionParser.py
# Generated from /home/plessas/EDBM34/grammars/LegalOpinion.g4 by ANTLR 4.7.2
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys




class LegalOpinionParser ( Parser ):

    grammarFileName = "LegalOpinion.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'/'", u"','", u"'\n'", u"<INVALID>", 
                     u"<INVALID>", u"':'", u"'\u03A4\u039C\u0397\u039C\u0391'" ]

    symbolicNames = [ u"<INVALID>", u"CONCLUSTION_START", u"PAR", u"PAR_2", 
                      u"SECTIONS_DIVISION", u"EMBEDDED_TEXT", u"PERSONAL", 
                      u"NUMBER_TEXT", u"LEGAL_OPINION", u"OF", u"NSK", u"HISTORY_HEADER", 
                      u"MOTIVATION_HEADER", u"DECISION_HEADER", u"BASE_ON_QUESTIONS", 
                      u"QUESTION_NUM", u"NUM", u"SLASH", u"COMMA", u"NEXT_LINE", 
                      u"BRACKET", u"HYPHEN", u"ANO_KATO", u"TMHMA_TEXT", 
                      u"TMIMA_ID", u"APOSTROPHE", u"ALL_CHARS", u"SPECIAL_CHARS", 
                      u"SPACE" ]

    RULE_akomaNtoso = 0
    RULE_judgment = 1
    RULE_header = 2
    RULE_judgmentBody = 3
    RULE_personalLegalOpinion = 4
    RULE_caseNmuber = 5
    RULE_docType = 6
    RULE_docNumber = 7
    RULE_docProponent = 8
    RULE_headerPar = 9
    RULE_questionInfo = 10
    RULE_headerLastPar = 11
    RULE_introduction = 12
    RULE_background = 13
    RULE_backgroundDivision = 14
    RULE_backgroundDivisionHeading = 15
    RULE_backgroundDivisionParagraph = 16
    RULE_backgroundDivisionParagraphNum = 17
    RULE_alinea = 18
    RULE_content = 19
    RULE_contentPar = 20
    RULE_background_alt = 21
    RULE_backgroundDivision_alt = 22
    RULE_backgroundDivisionHeading_alt = 23
    RULE_backgroundDivisionParagraph_alt = 24
    RULE_motivation = 25
    RULE_motivationDivision = 26
    RULE_motivationHeading = 27
    RULE_motivationDivisionParagraph = 28
    RULE_motivParNum = 29
    RULE_motivationDivision_alt = 30
    RULE_motivationHeading_alt = 31
    RULE_motivationDivisionParagraph_alt = 32
    RULE_motivParNum_alt = 33
    RULE_decision = 34
    RULE_decisionDivision = 35
    RULE_decisionHeading = 36
    RULE_decisionDivisionParagraph = 37
    RULE_decisionContent = 38
    RULE_decisionContentPar = 39
    RULE_decisionDivision_alt = 40
    RULE_decisionHeading_alt = 41
    RULE_decisionDivisionParagraph_alt = 42
    RULE_conclusions = 43
    RULE_conclusionStart = 44
    RULE_conclusionPar = 45

    ruleNames =  [ u"akomaNtoso", u"judgment", u"header", u"judgmentBody", 
                   u"personalLegalOpinion", u"caseNmuber", u"docType", u"docNumber", 
                   u"docProponent", u"headerPar", u"questionInfo", u"headerLastPar", 
                   u"introduction", u"background", u"backgroundDivision", 
                   u"backgroundDivisionHeading", u"backgroundDivisionParagraph", 
                   u"backgroundDivisionParagraphNum", u"alinea", u"content", 
                   u"contentPar", u"background_alt", u"backgroundDivision_alt", 
                   u"backgroundDivisionHeading_alt", u"backgroundDivisionParagraph_alt", 
                   u"motivation", u"motivationDivision", u"motivationHeading", 
                   u"motivationDivisionParagraph", u"motivParNum", u"motivationDivision_alt", 
                   u"motivationHeading_alt", u"motivationDivisionParagraph_alt", 
                   u"motivParNum_alt", u"decision", u"decisionDivision", 
                   u"decisionHeading", u"decisionDivisionParagraph", u"decisionContent", 
                   u"decisionContentPar", u"decisionDivision_alt", u"decisionHeading_alt", 
                   u"decisionDivisionParagraph_alt", u"conclusions", u"conclusionStart", 
                   u"conclusionPar" ]

    EOF = Token.EOF
    CONCLUSTION_START=1
    PAR=2
    PAR_2=3
    SECTIONS_DIVISION=4
    EMBEDDED_TEXT=5
    PERSONAL=6
    NUMBER_TEXT=7
    LEGAL_OPINION=8
    OF=9
    NSK=10
    HISTORY_HEADER=11
    MOTIVATION_HEADER=12
    DECISION_HEADER=13
    BASE_ON_QUESTIONS=14
    QUESTION_NUM=15
    NUM=16
    SLASH=17
    COMMA=18
    NEXT_LINE=19
    BRACKET=20
    HYPHEN=21
    ANO_KATO=22
    TMHMA_TEXT=23
    TMIMA_ID=24
    APOSTROPHE=25
    ALL_CHARS=26
    SPECIAL_CHARS=27
    SPACE=28

    def __init__(self, input, output=sys.stdout):
        super(LegalOpinionParser, self).__init__(input, output=output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AkomaNtosoContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LegalOpinionParser.AkomaNtosoContext, self).__init__(parent, invokingState)
            self.parser = parser

        def judgment(self):
            return self.getTypedRuleContext(LegalOpinionParser.JudgmentContext,0)


        def EOF(self):
            return self.getToken(LegalOpinionParser.EOF, 0)

        def getRuleIndex(self):
            return LegalOpinionParser.RULE_akomaNtoso

        def enterRule(self, listener):
            if hasattr(listener, "enterAkomaNtoso"):
                listener.enterAkomaNtoso(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAkomaNtoso"):
                listener.exitAkomaNtoso(self)




    def akomaNtoso(self):

        localctx = LegalOpinionParser.AkomaNtosoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_akomaNtoso)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.judgment()
            self.state = 93
            self.match(LegalOpinionParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JudgmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LegalOpinionParser.JudgmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(LegalOpinionParser.HeaderContext,0)


        def judgmentBody(self):
            return self.getTypedRuleContext(LegalOpinionParser.JudgmentBodyContext,0)


        def conclusions(self):
            return self.getTypedRuleContext(LegalOpinionParser.ConclusionsContext,0)


        def getRuleIndex(self):
            return LegalOpinionParser.RULE_judgment

        def enterRule(self, listener):
            if hasattr(listener, "enterJudgment"):
                listener.enterJudgment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJudgment"):
                listener.exitJudgment(self)




    def judgment(self):

        localctx = LegalOpinionParser.JudgmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_judgment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.header()
            self.state = 96
            self.judgmentBody()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LegalOpinionParser.NEXT_LINE:
                self.state = 97
                self.conclusions()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LegalOpinionParser.HeaderContext, self).__init__(parent, invokingState)
            self.parser = parser

        def personalLegalOpinion(self):
            return self.getTypedRuleContext(LegalOpinionParser.PersonalLegalOpinionContext,0)


        def caseNmuber(self):
            return self.getTypedRuleContext(LegalOpinionParser.CaseNmuberContext,0)


        def docProponent(self):
            return self.getTypedRuleContext(LegalOpinionParser.DocProponentContext,0)


        def headerPar(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(LegalOpinionParser.HeaderParContext)
            else:
                return self.getTypedRuleContext(LegalOpinionParser.HeaderParContext,i)


        def getRuleIndex(self):
            return LegalOpinionParser.RULE_header

        def enterRule(self, listener):
            if hasattr(listener, "enterHeader"):
                listener.enterHeader(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHeader"):
                listener.exitHeader(self)




    def header(self):

        localctx = LegalOpinionParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 100
                self.personalLegalOpinion()


            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 103
                self.caseNmuber()


            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 106
                self.docProponent()


            self.state = 110 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 109
                    self.headerPar()

                else:
                    raise NoViableAltException(self)
                self.state = 112 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JudgmentBodyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LegalOpinionParser.JudgmentBodyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def background(self):
            return self.getTypedRuleContext(LegalOpinionParser.BackgroundContext,0)


        def motivation(self):
            return self.getTypedRuleContext(LegalOpinionParser.MotivationContext,0)


        def decision(self):
            return self.getTypedRuleContext(LegalOpinionParser.DecisionContext,0)


        def background_alt(self):
            return self.getTypedRuleContext(LegalOpinionParser.Background_altContext,0)


        def introduction(self):
            return self.getTypedRuleContext(LegalOpinionParser.IntroductionContext,0)


        def getRuleIndex(self):
            return LegalOpinionParser.RULE_judgmentBody

        def enterRule(self, listener):
            if hasattr(listener, "enterJudgmentBody"):
                listener.enterJudgmentBody(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJudgmentBody"):
                listener.exitJudgmentBody(self)




    def judgmentBody(self):

        localctx = LegalOpinionParser.JudgmentBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_judgmentBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LegalOpinionParser.QUESTION_NUM:
                self.state = 114
                self.introduction()


            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LegalOpinionParser.SECTIONS_DIVISION]:
                self.state = 117
                self.background()
                self.state = 118
                self.motivation()
                self.state = 119
                self.decision()
                pass
            elif token in [LegalOpinionParser.PAR_2]:
                self.state = 121
                self.background_alt()
                self.state = 122
                self.motivation()
                self.state = 123
                self.decision()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PersonalLegalOpinionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LegalOpinionParser.PersonalLegalOpinionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NEXT_LINE(self):
            return self.getToken(LegalOpinionParser.NEXT_LINE, 0)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(LegalOpinionParser.SPACE)
            else:
                return self.getToken(LegalOpinionParser.SPACE, i)

        def PERSONAL(self):
            return self.getToken(LegalOpinionParser.PERSONAL, 0)

        def LEGAL_OPINION(self):
            return self.getToken(LegalOpinionParser.LEGAL_OPINION, 0)

        def BRACKET(self, i=None):
            if i is None:
                return self.getTokens(LegalOpinionParser.BRACKET)
            else:
                return self.getToken(LegalOpinionParser.BRACKET, i)

        def getRuleIndex(self):
            return LegalOpinionParser.RULE_personalLegalOpinion

        def enterRule(self, listener):
            if hasattr(listener, "enterPersonalLegalOpinion"):
                listener.enterPersonalLegalOpinion(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPersonalLegalOpinion"):
                listener.exitPersonalLegalOpinion(self)




    def personalLegalOpinion(self):

        localctx = LegalOpinionParser.PersonalLegalOpinionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_personalLegalOpinion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LegalOpinionParser.PERSONAL]:
                self.state = 127
                self.match(LegalOpinionParser.PERSONAL)
                self.state = 128
                self.match(LegalOpinionParser.SPACE)
                self.state = 129
                self.match(LegalOpinionParser.LEGAL_OPINION)
                pass
            elif token in [LegalOpinionParser.LEGAL_OPINION]:
                self.state = 130
                self.match(LegalOpinionParser.LEGAL_OPINION)
                self.state = 131
                self.match(LegalOpinionParser.SPACE)
                self.state = 132
                self.match(LegalOpinionParser.BRACKET)
                self.state = 133
                self.match(LegalOpinionParser.PERSONAL)
                self.state = 134
                self.match(LegalOpinionParser.BRACKET)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 137
            _la = self._input.LA(1)
            if not(_la==LegalOpinionParser.NEXT_LINE or _la==LegalOpinionParser.SPACE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CaseNmuberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(LegalOpinionParser.CaseNmuberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def docNumber(self):
            return self.getTypedRuleContext(LegalOpinionParser.DocNumberContext,0)


        def NEXT_LINE(self):
            return self.getToken(LegalOpinionParser.NEXT_LINE, 0)

        def NUMBER_TEXT(self):
            return self.getToken(LegalOpinionParser.NUMBER_TEXT, 0)

        def SPACE(self, i=None):
            if i is None:
                return self.getTokens(LegalOpinionParser.SPACE)
            else:
                return self.getToken(LegalOpinionParser.SPACE, i)

        def docType(self):
            return self.getTypedRuleContext(LegalOpinionParser.DocTypeContext,0)


        def ANO_KATO(self):
            return self.getToken(LegalOpinionParser.ANO_KATO, 0)

        def getRuleIndex(self):
            return LegalOpinionParser.RULE_caseNmuber

        def enterRule(self, listener):
            if hasattr(listener, "enterCaseNmuber"):
                listener.enterCaseNmuber(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCaseNmuber"):
                listener.exitCaseNmuber(self)




    def caseNmuber(self):
